--- a/index.html
+++ b/index.html
@@ -125,11 +125,13 @@ function funIniGroup(){
     for (var i = 0,len = eHeaderLis.length; i < len; i++) {
               // 判断是否登陆
               // 从缓存中获取用户信息
-              // var username = $api.getStorage('');
+              var username = $api.getStorage('userInfo');
+                    alert(JSON.stringify(username))
               var url = './html/frame'+i+'.html';
-              // if(i == 4 && !username){
-              //   url = './html/userWindow.html';
-              // }
+              if(i == 4 && !username){
+
+                url = './html/userWindow.html';
+              }
               frames.push( {
                 name: 'frame'+i,
                 url: url,
