--- a/html/frame4.html
+++ b/html/frame4.html
@@ -126,7 +126,7 @@
         <div class="aui-list aui-media-list aui-list-noborder aui-bg-info user-info">
             <div class="aui-list-item aui-list-item-middle user-header">
               <img src="../image/user-banner.png" alt="">
-                  <div class="aui-btn">马上登录</div>
+                  <div class="aui-btn" onclick="fnLogin()">马上登录</div>
                 </div>
             </div>
         </div>
@@ -134,7 +134,7 @@
             <div class="aui-row">
                 <div class="aui-col-5">
                     <img src="../image/user-icon1.png" alt="" style="width:35px">
-                    <div class="aui-grid-label aui-font-size-12">待付款1111</div>
+                    <div class="aui-grid-label aui-font-size-12">待付款</div>
                 </div>
                 <div class="aui-col-5">
                     <div class="aui-dot"></div>
