--- a/html/login_frame.html
+++ b/html/login_frame.html
@@ -218,10 +218,10 @@ function fnLogin() {
                        }
                    });
 
-                  // api.execScript({
-                  //       name: 'index',//你要刷新winName
-                  //       script: "location.reload(); "
-                  //   });
+                  api.execScript({
+                        name: 'frame4',//你要刷新winName
+                        script: "location.reload(); "
+                    });
                     api.closeWin();
                 }else{
 
