--- a/html/forgetPassword_frame.html
+++ b/html/forgetPassword_frame.html
@@ -52,162 +52,49 @@
 <script type="text/javascript">
 apiready = function() {
     fnInitUIInput();
+    init();   //初始化
 };
 
-var UIInput;
-var mobileUIInputId;
-var passwordUIInputId;
-var codeUIInputId;
-var mobileValue;
-var passwordValue;
-var codeValue
-
-
-function fnInitUIInput() {
-    // 用户名输入框模块
-    var username = $api.byId('mobile');
-    var usernameRect = $api.offset(username);
-    UIInput = api.require('UIInput');
-    UIInput.open({
-        rect: {
-            x:usernameRect.l ,
-            y: usernameRect.t,
-            w: usernameRect.w-120,
-            h: usernameRect.h
-        },
-        styles: {
-            // bgColor: '#fff',
-            size: 16,
-            color: '#000',
-            placeholder: {
-                color: '#ccc'
-            },
-        },
-        autoFocus: false,
-        maxRows: 1,
-        placeholder: '手机号',
-        keyboardType: 'default',
-        fixedOn: api.frameName
-    }, function(ret, err) {
-        if (ret) {
-            mobileUIInputId = ret.id;
-            if (ret && ret.eventType == "show") {
-                setTimeout(function() {
-                    UIInput.popupKeyboard({
-                        id: mobileUIInputId
-                    });
-                }, 200);
-            } else if (ret.eventType == "change") {
-                UIInput.value({
-                    id: mobileUIInputId
-                }, function(ret, err) {
-                    if (ret) {
-                        if (ret.status) {
-                            mobileValue = ret.msg;
-                        }
-                    }
-                });
-            }
-        }
-    });
-     // 验证码输入框
-     var code = $api.byId('code');
-     var codeRect = $api.offset(code);
-     UIInput.open({
-         rect: {
-             x: codeRect.l,
-             y: codeRect.t,
-             w: codeRect.w,
-             h: codeRect.h
-         },
-         styles: {
-             bgColor: '#fff',
-             size: 16,
-             color: '#000',
-             placeholder: {
-                 color: '#ccc'
-             }
-         },
-         autoFocus: false,
-         maxRows: 1,
-         placeholder: '验证码',
-         keyboardType: 'default',
-         fixedOn: api.frameName
-     }, function(ret, err) {
-         if (ret) {
-             codeUIInputId = ret.id;
-             if (ret.eventType == "change") {
-                 UIInput.value({
-                     id: codeUIInputId
-                 }, function(ret, err) {
-                     if (ret) {
-                         if (ret.status) {
-                             codeValue = ret.msg;
-                         }
-                     }
-                 });
-             }
-         }
-     });
-
-    // 密码输入框模块
-    var password = $api.byId('password');
-    var passwordRect = $api.offset(password);
-    UIInput.open({
-        rect: {
-            x: passwordRect.l,
-            y: passwordRect.t,
-            w: passwordRect.w,
-            h: passwordRect.h
-        },
-        styles: {
-            bgColor: '#fff',
-            size: 16,
-            color: '#000',
-            placeholder: {
-                color: '#ccc'
-            }
-        },
-        autoFocus: false,
-        maxRows: 1,
-        placeholder: '密码',
-        keyboardType: 'default',
-        inputType: 'password',
-        fixedOn: api.frameName
-    }, function(ret, err) {
-        if (ret) {
-            passwordUIInputId = ret.id;
-            if (ret.eventType == "change") {
-                UIInput.value({
-                    id: passwordUIInputId
-                }, function(ret, err) {
-                    if (ret) {
-                        if (ret.status) {
-                            passwordValue = ret.msg;
-                        }
-                    }
-                });
-            }
-        }
-    });
-}
-
-// 重置密码
-function fnreastPassword() {
-    usernameValue = $api.val($api.byId('mobile'))
-    passwordValue = $api.val($api.byId('password'))
-
+// 注册
+function fnRegister() {
     if (!usernameValue) {
         if (api.systemType == 'android') {
             setTimeout(function() {
                 UIInput.popupKeyboard({
-                    id: mobileUIInputId
+                    id: usernameUIInputId
                 });
             }, 200);
         } else {
             UIInput.popupKeyboard({
-                id: mobileUIInputId
+                id: usernameUIInputId
             });
+        }
+        return;
+    }
+    var partten = /^1[3458][0-9]{9}$/;
+    if(!partten.test(usernameValue)){
+      api.toast({
+          msg: '手机号码不正确',
+          duration: 2000,
+          location: 'middle'
+      });
+      UIInput.popupKeyboard({
+          id: usernameUIInputId
+      });
+      return;
+    }
+    if (!codeValue) {
+        if (api.systemType == 'android') {
+            setTimeout(function() {
+                UIInput.popupKeyboard({
+                    id: codeUIInputId
+                });
+            }, 200);
+        } else {
+
+          UIInput.popupKeyboard({
+              id: codeUIInputId
+          });
         }
         return;
     }
@@ -225,51 +112,120 @@ function fnreastPassword() {
         }
         return;
     }
-
+    api.showProgress({
+       title: '注册中',
+       modal: true
+   });
     api.ajax({
-        url: 'http://d.apicloud.com/mcm/api/user/login',
+        url: hname.hname.name + '/public/index/Create/create',
         method: 'post',
         headers: {
-            "X-APICloud-AppId": "A6921544633372",
-            "X-APICloud-AppKey": "2672b5911d8551540c1ea598e01c87fee217a1e5.1482500122476"
+            "X-APICloud-AppId": "A6079750662654",
+            "X-APICloud-AppKey": "4B3AB3D8-C633-6D3E-F6C3-37EDFE6978AB"
         },
         data: {
             values: {
-                "username": usernameValue,
-                "password": passwordValue
+                phone: usernameValue,
+                code:codeValue,
+                pswd: passwordValue
             }
         }
     }, function(ret, err) {
+        api.hideProgress();
         if (ret) {
-            // 保存用户信息
-            $api.setStorage('userInfo', ret);
-
             api.alert({
-                title: '提示',
-                msg: '登录成功',
+              title: '提示',
+              msg: ret.Msg,
             }, function(ret, err) {
                 if (ret) {
+                    // 跨窗口执行Script, 将用户名传给登录页面
+                    api.execScript({
+                        name: 'login',
+                        frameName: 'login_frame',
+                        script: 'fnSetUsername(\"' + usernameValue + '\");'
+                    });
                     api.closeWin();
                 }
             });
         } else {
+          console.log(ret.Msg)
             api.toast({
-                msg: '登录失败，用户名或密码错误',
+                msg: ret.Msg,
                 duration: 2000,
                 location: 'middle'
             });
+            location.reload();
         }
     });
 }
-
-// 被注册页面调用，用于从注册页面传递用户名
-function fnSetUsername(username_) {
-    usernameValue = username_;
-    UIInput.value({
-        id: usernameUIInputId,
-        msg: username_
-    }, function(ret, err) {});
-}
+// 验证码
+var InterValObj; //timer变量，控制时间
+var count = 60; //间隔函数，1秒执行
+var curCount;//当前剩余秒数
+   function fnsend_code() {
+     //  验证手机号
+     if (!usernameValue) {
+         if (api.systemType == 'android') {
+             setTimeout(function() {
+                 UIInput.popupKeyboard({
+                     id: usernameUIInputId
+                 });
+             }, 200);
+         } else {
+             UIInput.popupKeyboard({
+                 id: usernameUIInputId
+             });
+         }
+         return;
+     }
+     var partten = /^1[3458][0-9]{9}$/;
+     if(!partten.test(usernameValue)){
+       api.toast({
+           msg: '手机号码不正确',
+           duration: 2000,
+           location: 'middle'
+       });
+       UIInput.popupKeyboard({
+           id: usernameUIInputId
+       });
+       return;
+     }
+     curCount = count;
+     　　//设置button效果，开始计时
+        $("#btn").attr("disabled", "disabled");
+        $("#btn").css("background", "#ccc");
+        $("#btn").val('剩余'+curCount + "秒");
+        InterValObj = window.setInterval(SetRemainTime, 1000); //启动计时器，
+     api.ajax({
+         url: hname.hname.name + '/public/index/Create/send_sms',
+         method: 'post',
+         data: {
+           values:{
+             phone: usernameValue
+           }
+         }
+     },function(ret, err){
+         if (ret)
+         {
+             console.log(JSON.stringify(ret));
+         } else {
+              console.log(JSON.stringify(err));
+         }
+     });
+   }
+   //timer处理函数
+   function SetRemainTime() {
+         if (curCount == 0) {
+           window.clearInterval(InterValObj);//停止计时器
+           $("#btn").removeAttr("disabled");//启用按钮
+           $("#btn").css("background", "#fe467a");
+           $("#btn").val("重发验证码");
+         }
+         else {
+           curCount--;
+           $("#btn").val('剩余'+curCount + "秒");
+         }
+       }
 </script>
 
 </html>
