--- a/html/forgetPassword_frame.html
+++ b/html/forgetPassword_frame.html
@@ -21,8 +21,8 @@
       background: #fe467a;
       color: #fff;
       position: absolute;
-      right: 0;
-      top: 40px;
+      right:10px;
+      top: 45px;
       z-index: 9
     }
     </style>
@@ -35,8 +35,8 @@
           </div>
       </div>
     <div class="row mob">
-        <input id="mobile" class="input" type="number" placeholder="手机号" style="border-bottom: 1px solid #fe467a !important">
-        <div class="aui-btn">获取验证码</div>
+        <input id="mobile" class="input" type="number" placeholder="手机号" style="background:#fff;">
+        <input class="aui-btn" type="button" onclick="fnsend_code()" id="btn" value="获取验证码"></input>
     </div>
     <div class="row">
         <input id="code" class="input" type="password" placeholder="验证码" style="border-bottom: 1px solid #fe467a !important">
@@ -44,19 +44,156 @@
     <div class="row">
         <input id="password" class="input" type="password" placeholder="密码" style="border-bottom: 1px solid #fe467a !important">
     </div>
-    <div class="btn" tapmode="highlight" onclick="fnreastPassword();">重置密码</div>
+    <div class="btn" tapmode="highlight" onclick="user_reset();">重置密码</div>
 
 
 </body>
 <script type="text/javascript" src="../script/api.js"></script>
+<script type="text/javascript" src="../script/jquery-3.2.1.min.js"></script>
+<script src="../script/common.js"></script>
 <script type="text/javascript">
 apiready = function() {
-    fnInitUIInput();
+  fnInitUIInput()
     init();   //初始化
 };
+var UIInput;
+var usernameUIInputId;
+var passwordUIInputId;
+var codeUIInputId;
+var usernameValue;
+var passwordValue;
+var codeValue
+function fnInitUIInput() {
+    // 注册手机号输入框模块
+    var username = $api.byId('mobile');
+    var usernameRect = $api.offset(username);
+    UIInput = api.require('UIInput');
+    UIInput.open({
+        rect: {
+            x: usernameRect.l ,
+            y: usernameRect.t,
+            w: usernameRect.w-120,
+            h: usernameRect.h
+        },
+        styles: {
+            // bgColor: '#fff',
+            size: 16,
+            color: '#000',
+            placeholder: {
+                color: '#ccc'
+            },
+        },
+        autoFocus: false,
+        maxRows: 1,
+        placeholder: '手机号',
+        keyboardType: 'number',
+        fixedOn: api.frameName
+    }, function(ret, err) {
+        if (ret) {
+             usernameUIInputId = ret.id;
+            if (ret && ret.eventType == "show") {
+                setTimeout(function() {
+                    UIInput.popupKeyboard({
+                        id:  usernameUIInputId
+                    });
+                }, 200);
+            } else if (ret.eventType == "change") {
+                UIInput.value({
+                    id:  usernameUIInputId
+                }, function(ret, err) {
+                    if (ret) {
+                        if (ret.status) {
+                             usernameValue = ret.msg;
+                        }
+                    }
+                });
+            }
+        }
+    });
+     // 验证码输入框
+     var code = $api.byId('code');
+     var codeRect = $api.offset(code);
+     UIInput.open({
+         rect: {
+             x: codeRect.l,
+             y: codeRect.t,
+             w: codeRect.w,
+             h: codeRect.h
+         },
+         styles: {
+             bgColor: '#fff',
+             size: 16,
+             color: '#000',
+             placeholder: {
+                 color: '#ccc'
+             }
+         },
+         autoFocus: false,
+         maxRows: 1,
+         placeholder: '验证码',
+         keyboardType: 'number',
+         fixedOn: api.frameName
+     }, function(ret, err) {
+         if (ret) {
+             codeUIInputId = ret.id;
+             if (ret.eventType == "change") {
+                 UIInput.value({
+                     id: codeUIInputId
+                 }, function(ret, err) {
+                     if (ret) {
+                         if (ret.status) {
+                             codeValue = ret.msg;
+                         }
+                     }
+                 });
+             }
+         }
+     });
 
-// 注册
-function fnRegister() {
+    // 密码输入框模块
+    var password = $api.byId('password');
+    var passwordRect = $api.offset(password);
+    UIInput.open({
+        rect: {
+            x: passwordRect.l,
+            y: passwordRect.t,
+            w: passwordRect.w,
+            h: passwordRect.h
+        },
+        styles: {
+            bgColor: '#fff',
+            size: 16,
+            color: '#000',
+            placeholder: {
+                color: '#ccc'
+            }
+        },
+        autoFocus: false,
+        maxRows: 1,
+        placeholder: '密码',
+        keyboardType: 'default',
+        inputType: 'password',
+        fixedOn: api.frameName
+    }, function(ret, err) {
+        if (ret) {
+            passwordUIInputId = ret.id;
+            if (ret.eventType == "change") {
+                UIInput.value({
+                    id: passwordUIInputId
+                }, function(ret, err) {
+                    if (ret) {
+                        if (ret.status) {
+                            passwordValue = ret.msg;
+                        }
+                    }
+                });
+            }
+        }
+    });
+}
+
+// 重置密码
+function  user_reset() {
     if (!usernameValue) {
         if (api.systemType == 'android') {
             setTimeout(function() {
@@ -113,11 +250,11 @@ function fnRegister() {
         return;
     }
     api.showProgress({
-       title: '注册中',
+       title: '修改中',
        modal: true
    });
     api.ajax({
-        url: hname.hname.name + '/public/index/Create/create',
+        url: hname.hname.name + '/public/index/Create/user_reset',
         method: 'post',
         headers: {
             "X-APICloud-AppId": "A6079750662654",
@@ -133,28 +270,30 @@ function fnRegister() {
     }, function(ret, err) {
         api.hideProgress();
         if (ret) {
+          console.log(ret.Msg)
             api.alert({
               title: '提示',
               msg: ret.Msg,
-            }, function(ret, err) {
-                if (ret) {
-                    // 跨窗口执行Script, 将用户名传给登录页面
-                    api.execScript({
-                        name: 'login',
-                        frameName: 'login_frame',
-                        script: 'fnSetUsername(\"' + usernameValue + '\");'
-                    });
-                    api.closeWin();
-                }
+            }, function() {
+              if (ret.code == 'success') {
+                  // 跨窗口执行Script, 将用户名传给登录页面
+                  api.execScript({
+                      name: 'login',
+                      frameName: 'login_frame',
+                      script: 'fnSetUsername(\"' + usernameValue + '\");'
+                  });
+                  api.closeWin();
+                  console.log(JSON.stringify(ret));
+              }
             });
         } else {
-          console.log(ret.Msg)
             api.toast({
                 msg: ret.Msg,
                 duration: 2000,
                 location: 'middle'
             });
             location.reload();
+            console.log(ret.Msg)
         }
     });
 }
