--- a/html/register_frame.html
+++ b/html/register_frame.html
@@ -135,12 +135,12 @@ function fnRegister() {
         }
     }, function(ret, err) {
         api.hideProgress();
-        if (ret) { 
+        if (ret) {
             api.alert({
               title: '提示',
               msg: ret.Msg,
             }, function(ret, err) {
-                if (ret) {
+                if (ret.code == 'success') {
                     // 跨窗口执行Script, 将用户名传给登录页面
                     api.execScript({
                         name: 'login',
@@ -148,6 +148,8 @@ function fnRegister() {
                         script: 'fnSetUsername(\"' + usernameValue + '\");'
                     });
                     api.closeWin();
+                }else {
+
                 }
             });
         } else {
